--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "private": true,
   "dependencies": {
+    "@mui/styled-engine-sc": "^5.8.0",
     "immutability-helper": "^2.6.4",
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.17",
     "muicss": "^0.9.36",
-    "react": "^16.2.0",
+    "react": "^18.1.0",
     "react-columns": "^1.1.0",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
-    "react-dom": "^16.2.0",
+    "react-dom": "^18.1.0",
     "react-flexbox-grid": "^2.0.0",
     "react-frame": "^2.1.0",
     "react-frame-component": "^2.0.1",
@@ -26,7 +27,8 @@
     "react-pure-grid": "^2.1.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
